<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="What items can be recycled?"
        android:textSize="27sp"
        android:textColor="#080808"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#080808"/>

    <TextView
        android:id="@+id/q1_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1_1"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="#080808"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#080808"/>

    <TextView
        android:id="@+id/q1_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1_2"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="#080808"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#080808"/>

    <TextView
        android:id="@+id/q1_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1_3"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="#080808"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#080808"/>

    <TextView
        android:id="@+id/q1_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1_4"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="#080808"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#080808"/>

    <TextView
        android:id="@+id/q1_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1_5"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="#080808"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#080808"/>

    <TextView
        android:id="@+id/q1_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/q1_6"
        android:textColor="#080808"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#080808"/>





</LinearLayout>